--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -112,7 +112,10 @@ jobs:
   create-release:
     needs: [build-and-test, cross-platform-build]
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch'
+    if: |
+    (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')) ||
+    github.event_name == 'workflow_dispatch' ||
+    github.event_name == 'release'
     
     steps:
       - name: Checkout code
