--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -113,9 +113,7 @@ jobs:
     needs: [build-and-test, cross-platform-build]
     runs-on: ubuntu-latest
     if: |
-    (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')) ||
-    github.event_name == 'workflow_dispatch' ||
-    github.event_name == 'release'
+    (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')) || github.event_name == 'workflow_dispatch' || github.event_name == 'release'
     
     steps:
       - name: Checkout code
