--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -83,7 +83,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        architecture: [x86_64, i686]
+        architecture: [x86_64, i686
     
     steps:
       - name: Checkout code
@@ -112,8 +112,7 @@ jobs:
   create-release:
     needs: [build-and-test, cross-platform-build]
     runs-on: ubuntu-latest
-    if: |
-    (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')) || github.event_name == 'workflow_dispatch' || github.event_name == 'release'
+    if: startsWith(github.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch'
     
     steps:
       - name: Checkout code
